updated index.jade a bit

--- a/app/index.jade
+++ b/app/index.jade
@@ -62,7 +62,7 @@ head
 			.footer
 				p
 					span.glyphicon.glyphicon-heart
-					| from the Yeoman team
+					| from the Ask front-end team
 
 		// build:js scripts/vendor.js
 		// bower:js
